A little darker to augment contrast. Fixes #413.
git-svn-id: https://svn.merengueproject.org/trunk@1073 5c12d508-d76f-0410-91c7-e3e856e0eb0f

--- a/merengueproj/docs/_static/merenguedocs.css
+++ b/merengueproj/docs/_static/merenguedocs.css
@@ -40,7 +40,7 @@ a img {border: none;}
 	text-decoration:none; 
 	}
 #bd #sidebar a:link, #bd #sidebar { 
-	color:#8c6a46;
+	color:#806140;
 	text-decoration:none; 
 	}
 a:hover { 
